Fixed horizontal scrolling for Venn
removed horizontal scrolling from venn diagram that allowed 1 pixel scrolling

--- a/src/components/Analyze/DifferentiaExpAnalysisResults/D3Graphics/D3GraphStyles.css
+++ b/src/components/Analyze/DifferentiaExpAnalysisResults/D3Graphics/D3GraphStyles.css
@@ -268,6 +268,7 @@ body {
     width: 100%;
     border-left: 1px gray solid;
     border-right: 1px gray solid;
+    overflow-x: hidden;
   }
 
   div.ag-cell a {
